<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context="com.project.tb.bioclock.MainActivity">

    <TextView
        android:id="@+id/title_textView"
        android:gravity="center"
        android:textColor="#ffffff"
        android:paddingTop="12dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="italic"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/description_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text=""
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/started_progress_bar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="invisible"/>


    <TextView
        android:id="@+id/waiting_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@id/started_progress_bar"
        android:gravity="center"
        android:text="@string/waiting_info"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:background="@color/button_color"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:visibility="visible"
        android:onClick="startCounting"/>


    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_button"
        android:background="@color/stop_button_color"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:visibility="invisible"
        android:onClick="stopCounting"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:background="@color/button_color"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:visibility="invisible"
        android:onClick="startCounting"/>

</RelativeLayout>
